# Sapphillon

./: .gitignore  Cargo.toml  Cross.toml  DEVELOPERS.md  LICENSE  LICENSE-GPL  Makefile  README-ja.md  README.md  Sapphillon.code-workspace  buf.gen.yaml  buf.yaml  build.rs
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: check_protobuf.yml  release.yml  testing.yml
database/: Cargo.toml
database/src/: ext_plugin.rs  lib.rs  model.rs  model_trait.rs  permission.rs  plugin.rs  provider.rs  workflow.rs
database/src/model/: model_crud.rs
database/src/model_trait/: provider.rs  type_convert.rs
database/src/plugin/: plugin_function_crud.rs  plugin_function_permission_crud.rs  plugin_package_crud.rs
database/src/provider/: provider_crud.rs
database/src/workflow/: workflow_code_allowed_permission_crud.rs  workflow_code_crud.rs  workflow_crud.rs  workflow_result_crud.rs
docs/: deno_runtime_separation_report.md  deno_runtime_separation_report_EN.md  dynamic_linking_evaluation.md  dynamic_linking_final_conclusion.md  internal_plugin_build_system.md
entity/: Cargo.toml
entity/src/: convert.rs  lib.rs
entity/src/convert/: model.rs  plugin.rs  plugin_code.rs  provider.rs  workflow_code.rs
entity/src/entity/: ext_plugin_package.rs  mod.rs  model.rs  permission.rs  plugin_function.rs  plugin_function_permission.rs  plugin_package.rs  prelude.rs  provider.rs  workflow.rs  workflow_code.rs  workflow_code_allowed_permission.rs  workflow_code_plugin_function.rs  workflow_code_plugin_package.rs  workflow_result.rs
grpc/: Cargo.toml  build.rs
grpc/src/: lib.rs
js_plugins/other.author/plugin-c/1.0.0/: package.js
js_plugins/test/example/1.0.0/: package.js
js_plugins/test/plugin-a/1.0.0/: package.js
js_plugins/test/plugin-b/1.0.0/: package.js
js_plugins/test/plugin-c/1.0.0/: package.js
migration/: Cargo.toml
migration/src/: lib.rs  m20250908_000001_create_providers_and_models.rs
patches/libffi-sys/: Cargo.toml  build.rs
patches/libffi-sys/src/: lib.rs
plugins/browser_info/: Cargo.toml
plugins/browser_info/src/: 00_browser_info.js  lib.rs
plugins/exec/: Cargo.toml
plugins/exec/src/: 00_exec.js  lib.rs
plugins/fetch/: Cargo.toml
plugins/fetch/src/: 00_fetch.js  lib.rs
plugins/filesystem/: Cargo.toml
plugins/filesystem/src/: 00_filesystem.js  lib.rs
plugins/search/src/: 00_search.js  lib.rs
plugins/tab_manager/: Cargo.toml
plugins/tab_manager/src/: 00_tab_manager.js  lib.rs
plugins/webscraper/: Cargo.toml
plugins/webscraper/src/: 00_webscraper.js  lib.rs
plugins/window/: Cargo.toml
plugins/window/src/: 00_window.js  lib.rs
proto/: browser_bridge.proto  browser_info.proto  tab_manager.proto  webscraper.proto
proto/sapphillon/v1/: workflow.proto
scripts/: bump_version.py
src/: args.rs  debug_workflow.rs  dummy_plugin.rs  ext_plugin_manager.rs  global.rs  grpc_client.rs  grpc_server.rs  init.rs  internal_plugins.rs  lib.rs  main.rs  plugin_installer.rs  plugin_reload.rs  proto_generated.rs  server.rs  services.rs  sysconfig.rs  workflow.rs
src/proto_generated/: sapphillon.v1.rs
src/services/: browser_bridge.rs  browser_info.rs  greeter.rs  model.rs  plugin.rs  provider.rs  version.rs  workflow.rs
src/tests/: README_EN.md
src/tests/external_plugin/: common.rs  debug.rs  e2e.rs  installation.rs  mod.rs  workflow.rs
src/tests/fixtures/: file_plugin.js
tests/: build_system.rs  external_plugin_install_and_run.rs
