[workspace.package]

# name = "Sapphillon"
version = "0.3.0"
edition = "2024" 
authors = ["Yuuta Takahashi <y.highbridge04@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Walkmana-25/Sapphillon"
homepage = "https://github.com/Walkmana-25/Sapphillon"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "plugins/*",
    "grpc", # Add grpc as a workspace member
]
exclude = [
    "plugins/tests",
]

[patch.crates-io]
libffi-sys = { path = "patches/libffi-sys" }

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] } # reqwest needs a tokio runtime
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
deno_core = "0.355.0"
deno_error = "0.7.0"
serde = { version = "1.0", features = ["derive"] } # Add serde to workspace dependencies
serde_json = "1.0" # Add serde_json to workspace dependencies

tonic = "0.12.0"
prost = "0.13.1"
prost-types = "0.13.1"
# Use local core during development to allow runtime fixes.
# You can revert to the git dependency if desired.
sapphillon_core = { path = "./Saphillon-Core" }
tonic-build = "0.12.0"

[package]
name = "Sapphillon-Controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace =  true
homepage.workspace = true

[dependencies]

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
sapphillon_core.workspace = true

async-openai = "0.18.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio-stream = "0.1.17"

floorp-plugin-browser-info = {path = "./plugins/browser_info"}
fetch = {path = "./plugins/fetch"}
floorp-plugin-tab-manager = {path = "./plugins/tab_manager"}
floorp-plugin-webscraper = {path = "./plugins/webscraper"}
uuid = "1.18.0"
tonic-reflection = "0.12.0"
tower-http = { version = "0.5.2", features = ["cors"] }
tonic-web = "0.12.0"
unescaper = "0.1.6"
floorp-grpc = { path = "./grpc" } # Add floorp-grpc to main dependencies
futures-util = "0.3"


[build-dependencies]
tonic-build.workspace = true
