[workspace.package]

# name = "Sapphillon"
version = "0.8.0"
edition = "2024"
authors = ["Yuuta Takahashi <y.highbridge04@gmail.com>"]
license = "MPL-2.0 OR GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Walkmana-25/Sapphillon"
homepage = "https://github.com/Walkmana-25/Sapphillon"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = ["plugins/*", "migration", "entity", "database"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }    # reqwest needs a tokio runtime
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
deno_core = "0.355.0"
deno_error = "0.7.0"

tonic = "0.12.0"
prost = "0.13.1"
prost-types = "0.13.1"
sapphillon_core = { git = "ssh://git@github.com/Sapphillon/Sapphillon-Core.git", tag = "v0.8.6" }
tonic-build = "0.12.0"

sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "mock",
  "with-chrono",
  "debug-print",
] }
entity = { path = "./entity" }
migration = { path = "./migration" }
database = { path = "./database" }
base64 = "0.21"

serde = "1.0"
serde_json = "1.0"

[package]
name = "Sapphillon-Controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
sapphillon_core.workspace = true
sea-orm.workspace = true
entity.workspace = true
migration.workspace = true
database.workspace = true

async-openai = "0.18.0"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.17"

fetch = { path = "./plugins/fetch" }
filesystem = { path = "./plugins/filesystem" }
exec = { path = "./plugins/exec" }
uuid = { version = "1.18.0", features = ["v4"] }
tonic-reflection = "0.12.0"
tower-http = { version = "0.5.2", features = ["cors"] }
tonic-web = "0.12.0"
unescaper = "0.1.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }


[build-dependencies]
tonic-build.workspace = true
