[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sapphillon_core.workspace = true
entity.workspace = true
sea-orm.workspace = true
anyhow.workspace = true
tokio.workspace = true
base64.workspace = true
uuid = { version = "1.18.1", features = ["v4"] }
chrono.workspace = true
prost-types.workspace = true
serde_json.workspace = true
