[package]
name = "floorp-grpc" # クレート名を定義
version = "0.1.0"
edition = "2021"

[dependencies]
# ワークスペースで定義したバージョンを使用します
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
# ワークスペースで定義したバージョンを使用します
tonic-build = { workspace = true }