[package]
name = "exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
deno_core.workspace = true
deno_error.workspace = true
sapphillon_core.workspace = true
