[package]
name = "filesystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
deno_core.workspace = true
deno_error.workspace = true
log.workspace = true
sapphillon_core.workspace = true
tempfile = "3"
