[package]
name = "filesystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
deno_core.workspace = true
deno_error.workspace = true
log.workspace = true
sapphillon_core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile = "3"

[dev-dependencies]
serial_test = "2"
