[package]
name = "floorp-plugin-tab-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
sapphillon_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
floorp-grpc = { path = "../../grpc" }
